--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -4,8 +4,22 @@
     margin: 0;
 }
 
-/* NAVBAR */
+/* HEADER */
 
-nav {
+header {
+    display: flex;
+    justify-content: center;
     background-color: #F5EAF1;
+}
+
+header nav {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+header nav i {
+    color: #333;
 }
