--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -39,14 +39,43 @@ footer {
 /* MAIN */
 
 main {
+    margin: 100px 0 50px 0;
     display: flex;
     justify-content: center;
-    margin: 100px 0 50px 0;
 }
 
 .container {
     display: flex;
-    max-width: 70%;
+    flex-direction: column;
+    max-width: 80%;
     text-align: center;
+    border-radius: 10px;
 
+    -webkit-box-shadow: -4px 122px 20px 121px rgba(245,234,241,0.5);
+    -moz-box-shadow: -4px 122px 20px 121px rgba(245,234,241,0.5);
+    box-shadow: -4px 122px 20px 121px rgba(245,234,241,0.5);
+}
+.container ul {
+    margin: 30px 0;
+}
+
+.container ul li {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 30px 0;
+    padding: 0 20px 10px 0;
+    border-bottom: 1px solid #EAEAEA;
+}
+
+.container ul li img {
+    width: 200px;
+    height: 170px;
+}
+
+.container ul li div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 60%;
 }
