--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -60,22 +60,21 @@ main {
 }
 
 .container ul li {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    display: inline-block;
+    width: 40%;
     margin: 30px 0;
     padding: 0 20px 10px 0;
     border-bottom: 1px solid #EAEAEA;
+
 }
 
 .container ul li img {
-    width: 200px;
-    height: 170px;
+    width: 80%;
+    height: 80%;
 }
 
 .container ul li div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    max-width: 60%;
+    text-align: center;
 }
