--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -69,12 +69,24 @@ main {
 }
 
 .container ul li img {
-    width: 80%;
-    height: 80%;
+    width: 200px;
+    height: 160px;
 }
 
 .container ul li div {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     text-align: center;
+    align-items: center;
+}
+
+.container ul li div a {
+    text-decoration: none;
+}
+
+.container ul li div button {
+    width: 50%;
+    align-items: center;
+    cursor: pointer;
 }
