--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -14,6 +14,8 @@ h1 {
     margin: 20px 0;
 }
 
+/* ------------------------------------- HEADER  / FOOTER ----------------------------------------*/
+
 /* HEADER */
 
 header {
@@ -45,6 +47,8 @@ footer {
     width: 100%;
     background-color: #F5EAF1;
 }
+
+/* ------------------------------------------------------------------------ */
 
 /* MAIN */
 
@@ -126,6 +130,16 @@ main {
     border: 1px solid black;
     border-radius: 10px;
 }
+
+.container2 {
+    background-color: white;
+    max-width: 90%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+/* ---------------------------------------------------------------------------- */
 
 @media all and (max-width:700px) {
     
