--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -22,7 +22,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    display: flex;
+    display: flex!important;
     justify-content: center;
     background-color: #F5EAF1;
 }
@@ -32,6 +32,7 @@ header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 
 }
 
@@ -42,7 +43,7 @@ header nav i {
 /* FOOTER */
 
 footer {
-    display: flex;
+    display: flex!important;
     justify-content: center;
     width: 100%;
     background-color: #F5EAF1;
