divide price by 100

--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -149,6 +149,9 @@ main {
 .container2 .infoProduct {
     grid-area: infoProduct;
     padding: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .container2 .infoProduct .price {
