--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -41,10 +41,12 @@ header nav i {
 /* FOOTER */
 
 footer {
+    
     display: flex!important;
     justify-content: center;
     width: 100%;
     background-color: #F5EAF1;
+    margin-top: 40px;
 }
 
 /* ------------------------------------------------------------------------ */
