--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -14,10 +14,6 @@ h1 {
     margin: 20px 0;
 }
 
-p {
-    text-align: center;
-}
-
 /* ------------------------------------- HEADER  / FOOTER ----------------------------------------*/
 
 /* HEADER */
@@ -78,10 +74,7 @@ main {
     box-shadow: -4px 122px 20px 121px rgba(245,234,241,0.5);
 }
 
-.container a {
-    background-color: #F5EAF1;
-    margin: 15px;
-}
+
 
 .container ul {
     margin: 30px auto;
@@ -144,6 +137,39 @@ main {
     background-color: #F5EAF1;
     border: 1px solid black;
 }
+
+/* ----------------------------------------------- */
+
+.container a {
+    margin: 15px;
+}
+
+.container .basketList {
+    width: -webkit-fill-available;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.container .basketList li {
+    width: auto;
+    margin: 15px 0;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+
+    -webkit-box-shadow: 1px 7px 19px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 7px 19px -4px rgba(0,0,0,0.75);
+    box-shadow: 1px 7px 19px -4px rgba(0,0,0,0.75);
+}
+
+.container .basketList li .infoBasket {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* -------------------------------------- */
 
 .container2 {
     background-color: white;
