update ' deleteBasket ' function ans adding style

--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -140,6 +140,10 @@ main {
 
 /* ----------------------------------------------- */
 
+.deleteAllButton {
+    width: max-content;
+}
+
 .container a {
     margin: 15px;
 }
