--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -144,6 +144,13 @@ main {
     width: max-content;
 }
 
+.totalPrice {
+   border-top: 1px solid black;
+   margin: 15px 0;
+   padding: 15px 0;
+   font-weight: bold;
+}
+
 .container a {
     margin: 15px;
 }
