creation of order form in 'panier.html'

--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -9,6 +9,10 @@ body {
     background-attachment: fixed;
 }
 
+section {
+    margin: 20px 0;
+}
+
 h1 {
     text-align: center;
     margin: 20px 0;
