--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 section {
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 h1 {
@@ -77,8 +77,6 @@ main {
     -moz-box-shadow: -4px 122px 20px 121px rgba(245,234,241,0.5);
     box-shadow: -4px 122px 20px 121px rgba(245,234,241,0.5);
 }
-
-
 
 .container ul {
     margin: 30px auto;
@@ -157,6 +155,14 @@ main {
 
 .container a {
     margin: 15px;
+}
+
+.container h2 {
+    margin: 15px 0;
+}
+
+.container form {
+    margin: 20px ;
 }
 
 .container .basketList {
