adding condition to display 'confirmation.html' content and adding home link

--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -22,6 +22,10 @@ h1 {
     font-weight: bold;
 }
 
+.error {
+    color: red;
+}
+
 /* ------------------------------------- HEADER  / FOOTER ----------------------------------------*/
 
 /* HEADER */
